src/test/deca/context/invalid/3_43.deca
{
    int a;
    this.a = 10;
}